--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "symfony/framework-bundle": "2.*",
+        "symfony/framework-bundle": "2.*"
     },
     "autoload": {
         "psr-0": { "Zim32\\RequestLimitBundle": "" }
